# ZBar

./: .gitignore  .hgignore  CMakeLists.txt  COPYING  ChangeLog  Findzbar.cmake  HACKING  Makefile.am  NEWS  NEWS.orig  Package.swift  README  README.md  README.windows  TODO  ZBar.podspec  ZBarSDK.podspec  ZBarSDK.podspec.json  conanfile.py  configure.ac  zbar-gtk.pc.in  zbar-qt.pc.in  zbar.nsi  zbar.pc.in  zbar.spec.in  zbar64.sln  zbar64.vcxproj  zbar64.vcxproj.filters  zebra-gtk.pc.in  zebra-qt.pc.in  zebra.pc.in  zebra.spec.in
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
Sources/ZBar/: ZBar.swift
Tests/: LinuxMain.swift
Tests/ZBarTests/: XCTestManifests.swift  ZBarTests.swift
ZBar.xcworkspace/: contents.xcworkspacedata
android/: AndroidManifest.xml  ChangeLog  README  build-ndk.xml  build.xml
android/jni/: Android.mk  config.h
debian/: changelog  control  copyright  docs  libzebra-dev.install  libzebra3.install  libzebragtk-dev.install  libzebragtk0.install  libzebraqt-dev.install  libzebraqt0.install  rules  shlibs.local  zebra-tools.install
doc/: Makefile.am.inc  doxygen.conf.in  manual.xml  manual.xml.in  style.xsl
doc/api/: footer.html
doc/ref/: commonoptions.xml  zbarcam.xml  zbarimg.xml  zebracam.xml  zebraimg.xml
examples/: paginate.pl  processor.c  processor.cpp  processor.pl  processor.py  read_one.py  scan_image.c  scan_image.cpp  scan_image.pl  scan_image.py  scan_image.vcproj  upcrpc.pl  upcrpc.py
gtk/: Makefile.am.inc  zbargtk.c  zbargtkprivate.h  zbarmarshal.list  zebragtk.c  zebragtkprivate.h
include/: Makefile.am.inc  config.h  zbar.h  zebra.h
include/zbar/: Decoder.h  Exception.h  Image.h  ImageScanner.h  Processor.h  QZBar.h  QZBarImage.h  Scanner.h  Symbol.h  Video.h  Window.h  ZBarCaptureReader.h  ZBarImage.h  ZBarImageScanner.h  ZBarReaderController.h  ZBarReaderView.h  ZBarReaderViewController.h  ZBarSymbol.h  zbargtk.h
include/zebra/: Decoder.h  Exception.h  Image.h  ImageScanner.h  ImageWalker.h  Processor.h  QZebra.h  QZebraImage.h  Scanner.h  Symbol.h  Video.h  Window.h  zebragtk.h
iphone/: ChangeLog  README  ZBarCVImage.h  ZBarCVImage.m  ZBarCameraSimulator.m  ZBarCaptureReader.m  ZBarHelpController.h  ZBarHelpController.m  ZBarImage.m  ZBarImageScanner.m  ZBarReaderController.m  ZBarReaderView.m  ZBarReaderViewController.m  ZBarReaderViewImpl_Capture.m  ZBarReaderViewImpl_Simulator.m  ZBarSymbol.m  config.h  debug.h  prefix.pch
iphone/doc/: Documentation.html  ZBarImage.rst  ZBarImageScanner.rst  ZBarReaderController.rst  ZBarReaderDelegate.rst  ZBarReaderView.rst  ZBarReaderViewController.rst  ZBarReaderViewDelegate.rst  ZBarSymbol.rst  ZBarSymbolSet.rst  apiref.rst  camera.rst  compat.rst  conf.py  custom.rst  devguide.rst  faq.rst  getstarted.rst  index.rst  install.rst  licensing.rst  optimizing.rst  picker.rst  support.rst  tutorial.rst
iphone/include/: config.h
iphone/res/: PrivacyInfo.xcprivacy  ZBarSDK-Info.plist  zbar-help.html
iphone/zbar.xcodeproj/: project.pbxproj
java/: Makefile.am  zbarjni.c
java/net/sourceforge/zbar/: Config.java  Image.java  Symbol.java
java/test/: TestImage.java  TestImageScanner.java  TestScanImage.java
lib/: libzbar-0.lib  libzbar64-0.lib
perl/: Changes  MANIFEST  Makefile.PL  README  ZBar.pm  ZBar.xs  Zebra.pm  Zebra.xs  ppport.h  typemap
perl/ZBar/: Image.pod  ImageScanner.pod  Processor.pod  Symbol.pod
perl/Zebra/: Image.pod  ImageScanner.pod  Processor.pod  Symbol.pod
perl/examples/: paginate.pl  processor.pl  read_one.pl  scan_image.pl
perl/t/: Decoder.t  Image.t  Processor.t  Scanner.t  ZBar.t  Zebra.t  pod-coverage.t  pod.t
plugin/: Makefile.am.inc  plugin.c
pygtk/: Makefile.am.inc  zbarpygtk.override  zbarpygtkmodule.c  zebrapygtk.override  zebrapygtkmodule.c
python/: MANIFEST.in  Makefile.am.inc  README  decoder.c  enum.c  exception.c  image.c  imagescanner.c  processor.c  scanner.c  setup.py  symbol.c  symboliter.c  symbolset.c  zbarmodule.c  zbarmodule.h  zebramodule.c  zebramodule.h
python/examples/: processor.py
python/test/: test_zbar.py  test_zebra.py
qrcode/: binarize.c  image.c  image.h  util.h
qrcode/src/: bch15_5.c  bch15_5.h  binarize.c  binarize.h  image.c  image.h  isaac.c  isaac.h  qrcode.h  qrdec.c  qrdectxt.c  reader.c  rs.c  rs.h  util.c  util.h
qrcode/unix/: Makefile
qt/: Makefile.am.inc  QZBar.cpp  QZBarThread.cpp  QZBarThread.h  QZebra.cpp  QZebraThread.cpp  QZebraThread.h
test/: Makefile.am  Makefile.am.inc  barcodetest.py  dbg_scan.cc  dbg_scan.cpp  pdf417_encode.h  scan_video.c  test_convert.c  test_cpp.cpp  test_cpp_img.cpp  test_decode.c  test_gtk.c  test_images.c  test_images.h  test_jpeg.c  test_perl.pl  test_proc.c  test_pygtk.py  test_qt.cpp  test_video.c  test_walk.c  test_window.c
test/iphone/: prefix.pch  readertest.m
test_package/: CMakeLists.txt  conanfile.py  main.cpp
zbar/: Makefile.am.inc  config.c  convert.c  debug.h  decoder.c  decoder.h  error.c  error.h  event.h  image.c  image.h  img_scanner.c  img_scanner.h  jpeg.c  libzbar-0.def  libzbar.rc  logo.c  mutex.h  processor.c  processor.h  refcnt.c  refcnt.h  scanner.c  svg.c  svg.h  symbol.c  symbol.h  thread.h  timer.h  unistd.h  video.c  video.h  window.c  window.h
zbar/decoder/: codabar.c  codabar.h  code128.c  code128.h  code39.c  code39.h  code93.c  code93.h  cyclic.c  cyclic.h  databar.c  databar.h  ean.c  ean.h  i25.c  i25.h  pdf417.c  pdf417.h  qr_finder.c  qr_finder.h  qrcode.h
zbar/processor/: lock.c  posix.c  posix.h  win.c  win.h  x.c
zbar/qrcode/: qrdec.c  (+3 more)
zbarcam/: Makefile.am.inc  zbarcam.c  zbarcam.rc
zbarimg/: Makefile.am.inc  zbarimg.c  zbarimg.cpp  zbarimg.rc
zebra/: Makefile.am  Makefile.am.inc  code128.c  code128.h  config.c  convert.c  debug.h  decoder.c  decoder.h  ean.c  ean.h  error.c  error.h  image.c  image.h  img_scanner.c  img_walker.c  jpeg.c  logo.c  processor.c  processor.h  scanner.c  symbol.c  symbol.h  v4l1.c  v4l2.c  video.c  video.h  window.c  window.h  x.c  ximage.c  xv.c
zebracam/: Makefile.am  Makefile.am.inc  zebracam.c
zebraimg/: Makefile.am  Makefile.am.inc  zebraimg.cpp
(+125 files in other folders)
